--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "isomorphic-unfetch": "^3.1.0",
+    "mongoose": "^6.6.4",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.3"
   },
   "devDependencies": {
     "eslint": "8.24.0",
